Update to syntax tree